--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css" />
 
-    <title>bkroland Resume</title>
+    <title>JOSEPHINE Resume</title>
   </head>
 
   <body>
